--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,19 +1,26 @@
 <div class="grid grid-rows-2 text-base grid-flow-col m-0
 md:text-2xl">
-    <a class="nav-div"
-    [routerLink]="['/login']" 
-    routerLinkActive="router-link-active">
-        <span>
-            Login
-        </span>
-    </a>
-    <a class="nav-div"
-    [routerLink]="['/register']" 
-    routerLinkActive="router-link-active">
-        <span>
-            Register
-        </span>
-    </a>
+    <div *ngIf="!isUserLogged">
+        <a class="nav-div"
+        [routerLink]="['/login']" 
+        routerLinkActive="router-link-active">
+            <span>
+                Login
+            </span>
+        </a>
+        <a class="nav-div"
+        [routerLink]="['/register']" 
+        routerLinkActive="router-link-active">
+            <span>
+                Register
+            </span>
+        </a>
+    </div>
+    <div *ngIf="isUserLogged">
+        <p>
+            My profile
+        </p>
+    </div>
 </div>
 
 <router-outlet></router-outlet>
