--- a/frontend/src/app/components/profile-page/profile-page.component.html
+++ b/frontend/src/app/components/profile-page/profile-page.component.html
@@ -10,7 +10,7 @@
             Nick: {{ userData.accountNick }}
         </p>
         <p>
-            Email: {{ userData.acountEmail }}
+            Email: {{ userData.accountEmail }}
         </p>
         <div *ngIf="userData.loans.length">
             <!-- LOANS HERE -->
