--- a/frontend/src/app/components/register-page/register-form/register-form.component.html
+++ b/frontend/src/app/components/register-page/register-form/register-form.component.html
@@ -19,6 +19,11 @@
         [formControl]="userLastName"
         >
         <input 
+        type="text" 
+        placeholder="Pass nick"
+        [formControl]="userNick"
+        >
+        <input 
         type="password" 
         placeholder="Pass password"
         [formControl]="userPassword"
