--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -30,7 +30,7 @@ md:text-2xl">
             Your balance: {{ balance }}$
         </span>
         <a class="nav-div"
-        [routerLink]="['/profile']" 
+        [routerLink]="['/myprofile']" 
         routerLinkActive="router-link-active">
             <span>
                 My profile
