--- a/frontend/src/app/components/profile-page/profile-page.component.html
+++ b/frontend/src/app/components/profile-page/profile-page.component.html
@@ -12,6 +12,52 @@
         <p>
             Email: {{ userData.accountEmail }}
         </p>
+        <div>
+            <ng-container *ngIf="!userData.invitations.length">
+                <span>
+                    You don't have any invitations
+                </span>
+            </ng-container>
+            <ng-container *ngIf="userData.invitations.length">
+                <div *ngFor="let invitation of userData.invitations">
+                    <span>
+                        Invitation from {{ invitation.senderFirstName }} ({{ invitation.senderNick }})
+                        <span>
+                            <button (click)="answerInvitation(invitation.senderID, 'accept')" 
+                            class="bg-green-700 text-white">
+                                <svg xmlns="http://www.w3.org/2000/svg" 
+                                class="h-6 w-6" 
+                                fill="none" 
+                                viewBox="0 0 24 24" 
+                                stroke="currentColor" 
+                                stroke-width="2"
+                                >
+                                    <path stroke-linecap="round" 
+                                    stroke-linejoin="round" 
+                                    d="M5 13l4 4L19 7" 
+                                    />
+                                </svg>
+                            </button>
+                            <button (click)="answerInvitation(invitation.senderID, 'decline')" 
+                            class="bg-red-700 text-white">
+                                <svg xmlns="http://www.w3.org/2000/svg" 
+                                class="h-6 w-6" 
+                                fill="none" 
+                                viewBox="0 0 24 24" 
+                                stroke="currentColor" 
+                                stroke-width="2"
+                                >
+                                    <path stroke-linecap="round" 
+                                    stroke-linejoin="round" 
+                                    d="M6 18L18 6M6 6l12 12" 
+                                    />
+                                </svg>
+                            </button>
+                        </span>
+                    </span>
+                </div>
+            </ng-container>
+        </div>
         <div *ngIf="userData.loans.length">
             <div *ngIf="activeLoans.length">
                 <header>
