--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -9,6 +9,7 @@ md:text-2xl">
             </span>
         </a> 
     </div>
+    <app-search-tool></app-search-tool>
     <ng-container *ngIf="!isUserLogged">
         <a class="nav-div"
         [routerLink]="['/login']" 
