--- a/frontend/src/app/components/profile-page/profile-page.component.html
+++ b/frontend/src/app/components/profile-page/profile-page.component.html
@@ -121,7 +121,7 @@
                     <div class="flex items-center justify-center">
                         <figure class="relative max-w-xs cursor-pointer">
                             <button (click)="redirect(createPath('/show/', loan.showID))">
-                                <img class="w-8/12 h-4/6" [src]=loan.showPoster alt="" title="sdafs">
+                                <img class="w-8/12 h-4/6" [src]=loan.showPoster alt="">
                                 <figcaption class="absolute text-lg -mt-10 text-white px-4">
                                     {{ loan.showTitle }}
                                 </figcaption>    
