--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -37,7 +37,8 @@ md:text-2xl">
                 My profile
             </span>
         </a>
-        <button (click)="logout()">
+        <button (click)="logout()"
+        class="nav-div">
             Logout
         </button>
     </ng-container>
