--- a/frontend/src/app/components/profile-page/profile-page.component.html
+++ b/frontend/src/app/components/profile-page/profile-page.component.html
@@ -2,182 +2,195 @@
     <header>
         Your account
     </header>
-    <div>
-        <p>
-            Name: {{ userData.accountFirstName }}  {{ userData.accountLastName }}
-        </p>
-        <p>
-            Nick: {{ userData.accountNick }}
-        </p>
-        <p>
-            Email: {{ userData.accountEmail }}
-        </p>
+    <div class="grid grid-flow-col grid-cols-3">
         <div>
-            <div class="grid">
-                <header class="place-self-center">
-                    Community
-                </header>
-                <div class="grid grid-flow-col">
-                    <button (click)="communityTab='friends'"
-                    [ngClass]="{'active-tab-style': communityTab=='friends'}">
-                        Friends
-                    </button>
-                    <button (click)="communityTab='invitations'"
-                    [ngClass]="{'active-tab-style': communityTab=='invitations'}">
-                        Invitations
-                    </button>
-                </div>
-            </div>
-            <ng-container *ngIf="communityTab=='friends'">
-                <ng-container *ngIf="!userData.friends.length">
-                    <span>
-                        You don't have any friends
-                    </span>
-                </ng-container>
-                <ng-container *ngIf="userData.friends.length">
-                    <div *ngFor="let friend of userData.friends">
-                        <span (click)="redirect(createPath('/profile/', friend.friendID))">
-                            {{ friend.friendFirstName }}({{ friend.friendNick}})
-                        </span>
-                        <button (click)="deleteFriend(friend.friendID)" 
-                        class="bg-red-700 text-white">
-                            <svg xmlns="http://www.w3.org/2000/svg" 
-                            class="h-6 w-6" 
-                            fill="none" 
-                            viewBox="0 0 24 24" 
-                            stroke="currentColor" 
-                            stroke-width="2"
-                            >
-                                <path stroke-linecap="round" 
-                                stroke-linejoin="round" 
-                                d="M6 18L18 6M6 6l12 12" 
-                                />
-                            </svg>
+            <p>
+                Name: {{ userData.accountFirstName }}  {{ userData.accountLastName }}
+            </p>
+            <p>
+                Nick: {{ userData.accountNick }}
+            </p>
+            <p>
+                Email: {{ userData.accountEmail }}
+            </p>
+            <div>
+                <div class="grid">
+                    <header class="place-self-center">
+                        Community
+                    </header>
+                    <div class="grid grid-flow-col">
+                        <button (click)="communityTab='friends'"
+                        [ngClass]="{'active-tab-style': communityTab=='friends'}">
+                            Friends
+                        </button>
+                        <button (click)="communityTab='invitations'"
+                        [ngClass]="{'active-tab-style': communityTab=='invitations'}">
+                            Invitations
                         </button>
                     </div>
-                </ng-container>
-            </ng-container>
-            <ng-container *ngIf="communityTab=='invitations'">
-                <ng-container *ngIf="!userData.invitations.length">
-                    <span>
-                        You don't have any invitations
-                    </span>
-                </ng-container>
-                <ng-container *ngIf="userData.invitations.length">
-                    <div *ngFor="let invitation of userData.invitations">
+                </div>
+                <ng-container *ngIf="communityTab=='friends'">
+                    <ng-container *ngIf="!userData.friends.length">
                         <span>
-                            <span (click)="redirect(createPath('/profile/', invitation.senderID))">
-                                Invitation from {{ invitation.senderFirstName }} ({{ invitation.senderNick }})
-                            </span>
-                            <span>
-                                <button (click)="answerInvitation(invitation.senderID, 'accept')" 
-                                class="bg-green-700 text-white">
-                                    <svg xmlns="http://www.w3.org/2000/svg" 
-                                    class="h-6 w-6" 
-                                    fill="none" 
-                                    viewBox="0 0 24 24" 
-                                    stroke="currentColor" 
-                                    stroke-width="2"
-                                    >
-                                        <path stroke-linecap="round" 
-                                        stroke-linejoin="round" 
-                                        d="M5 13l4 4L19 7" 
-                                        />
-                                    </svg>
-                                </button>
-                                <button (click)="answerInvitation(invitation.senderID, 'decline')" 
-                                class="bg-red-700 text-white">
-                                    <svg xmlns="http://www.w3.org/2000/svg" 
-                                    class="h-6 w-6" 
-                                    fill="none" 
-                                    viewBox="0 0 24 24" 
-                                    stroke="currentColor" 
-                                    stroke-width="2"
-                                    >
-                                        <path stroke-linecap="round" 
-                                        stroke-linejoin="round" 
-                                        d="M6 18L18 6M6 6l12 12" 
-                                        />
-                                    </svg>
-                                </button>
-                            </span>
+                            You don't have any friends
                         </span>
-                    </div>
+                    </ng-container>
+                    <ng-container *ngIf="userData.friends.length">
+                        <div *ngFor="let friend of userData.friends">
+                            <span (click)="redirect(createPath('/profile/', friend.friendID))">
+                                {{ friend.friendFirstName }}({{ friend.friendNick}})
+                            </span>
+                            <button (click)="deleteFriend(friend.friendID)" 
+                            class="bg-red-700 text-white">
+                                <svg xmlns="http://www.w3.org/2000/svg" 
+                                class="h-6 w-6" 
+                                fill="none" 
+                                viewBox="0 0 24 24" 
+                                stroke="currentColor" 
+                                stroke-width="2"
+                                >
+                                    <path stroke-linecap="round" 
+                                    stroke-linejoin="round" 
+                                    d="M6 18L18 6M6 6l12 12" 
+                                    />
+                                </svg>
+                            </button>
+                        </div>
+                    </ng-container>
                 </ng-container>
-            </ng-container>
+                <ng-container *ngIf="communityTab=='invitations'">
+                    <ng-container *ngIf="!userData.invitations.length">
+                        <span>
+                            You don't have any invitations
+                        </span>
+                    </ng-container>
+                    <ng-container *ngIf="userData.invitations.length">
+                        <div *ngFor="let invitation of userData.invitations">
+                            <span>
+                                <span (click)="redirect(createPath('/profile/', invitation.senderID))">
+                                    Invitation from {{ invitation.senderFirstName }} ({{ invitation.senderNick }})
+                                </span>
+                                <span>
+                                    <button (click)="answerInvitation(invitation.senderID, 'accept')" 
+                                    class="bg-green-700 text-white">
+                                        <svg xmlns="http://www.w3.org/2000/svg" 
+                                        class="h-6 w-6" 
+                                        fill="none" 
+                                        viewBox="0 0 24 24" 
+                                        stroke="currentColor" 
+                                        stroke-width="2"
+                                        >
+                                            <path stroke-linecap="round" 
+                                            stroke-linejoin="round" 
+                                            d="M5 13l4 4L19 7" 
+                                            />
+                                        </svg>
+                                    </button>
+                                    <button (click)="answerInvitation(invitation.senderID, 'decline')" 
+                                    class="bg-red-700 text-white">
+                                        <svg xmlns="http://www.w3.org/2000/svg" 
+                                        class="h-6 w-6" 
+                                        fill="none" 
+                                        viewBox="0 0 24 24" 
+                                        stroke="currentColor" 
+                                        stroke-width="2"
+                                        >
+                                            <path stroke-linecap="round" 
+                                            stroke-linejoin="round" 
+                                            d="M6 18L18 6M6 6l12 12" 
+                                            />
+                                        </svg>
+                                    </button>
+                                </span>
+                            </span>
+                        </div>
+                    </ng-container>
+                </ng-container>
+            </div>
         </div>
-        <div *ngIf="userData.loans.length">
-            <div *ngIf="activeLoans.length">
-                <header>
-                    Your active loans
-                </header>
-                <span class="text-center"
+        <div class="col-span-2">
+            <header class="text-lg text-center">
+                Your loans
+            </header>
+            <div class="grid grid-flow-col">
+                <button (click)="loansTab='active'"
+                [ngClass]="{'active-tab-style': loansTab=='active'}">
+                    Active
+                </button>
+                <button (click)="loansTab='past'"
+                [ngClass]="{'active-tab-style': loansTab=='past'}">
+                    Past
+                </button>
+            </div>
+            <div class="grid">
+                <span class="text-center font-bold text-lg rounded-sm"
                 [ngClass]="{'bg-white': !loanInfo, 'success-info': loanInfo==='Loan extended!', 'fail-info': loanInfo!=='Loan extended!', 'border-2': loanInfo!==''}"
                 >
                     {{ loanInfo }}
                 </span>
-                <div class="grid grid-cols-2 grid-flow-col"
-                *ngFor="let loan of activeLoans">
-                    <div class="flex items-center justify-center">
-                        <figure class="relative max-w-xs cursor-pointer">
-                            <button (click)="redirect(createPath('/show/', loan.showID))">
-                                <img class="w-8/12 h-4/6" [src]=loan.showPoster alt="">
-                                <figcaption class="absolute text-lg -mt-10 text-white px-4">
-                                    {{ loan.showTitle }}
-                                </figcaption>    
-                            </button>
-                        </figure>
-                    </div>
-                    <div class="grid content-around">
-                        <span>
-                            Loaned on: {{ createDateFormat(loan.loanStartDate.$date) }}
-                        </span>
-                        <span>
-                            Ends on: {{ createDateFormat(loan.loanEndDate.$date) }}
-                        </span>
-                        <div>
-                            
-                            <div class="flex justify-evenly">
-                                <button (click)="extendLoan(loan.loanID, 'week')">
-                                    Extend loan by a week for {{ enviroment.extendWeekPrice }}$
+            </div>
+            <div *ngIf="loansTab=='active'">
+                <div *ngIf="activeLoans.length"
+                class="grid grid-flow-row grid-cols-2">
+                    <div class="grid grid-cols-2 grid-flow-col"
+                    *ngFor="let loan of activeLoans">
+                        <div class="flex items-center justify-center">
+                            <figure class="relative max-w-xs cursor-pointer">
+                                <button (click)="redirect(createPath('/show/', loan.showID))">
+                                    <img class="w-full h-full" [src]=loan.showPoster alt="">
+                                    <figcaption class="absolute text-lg -mt-10 text-white px-4">
+                                        {{ loan.showTitle }}
+                                    </figcaption>    
                                 </button>
-                                <button (click)="extendLoan(loan.loanID, 'month')">
-                                    Extend loan by a month {{ enviroment.extendMonthPrice }}$
-                                </button>
+                            </figure>
+                        </div>
+                        <div class="grid content-around">
+                            <span>
+                                Loaned on: {{ createDateFormat(loan.loanStartDate.$date) }}
+                            </span>
+                            <span>
+                                Ends on: {{ createDateFormat(loan.loanEndDate.$date) }}
+                            </span>
+                            <div>
+                                <div class="flex justify-evenly">
+                                    <button (click)="extendLoan(loan.loanID, 'week')"
+                                    class="show-button">
+                                        Extend loan by a week for {{ enviroment.extendWeekPrice }}$
+                                    </button>
+                                    <button (click)="extendLoan(loan.loanID, 'month')"
+                                    class="show-button">
+                                        Extend loan by a month {{ enviroment.extendMonthPrice }}$
+                                    </button>
+                                </div>
                             </div>
                         </div>
-                        
                     </div>
                 </div>
-            </div>
-            <div *ngIf="!activeLoans.length">
-                No active loans
-            </div>
-            <div *ngIf="earlierLoans.length">
-                <header>
-                    Your eariler loans
-                </header>
-                <div *ngFor="let loan of earlierLoans">
-                    <div class="flex items-center justify-center">
-                        <figure class="relative max-w-xs cursor-pointer">
-                            <button (click)="redirect(createPath('/show/', loan.showID))">
-                                <img class="" [src]=loan.showPoster alt="">
-                                <figcaption class="absolute text-lg -mt-10 text-white px-4">
-                                    {{ loan.showTitle }}
-                                </figcaption>    
-                            </button>
-                        </figure>
-                    </div>
-                    Loaned on: {{ createDateFormat(loan.loanStartDate.$date) }}
-                    Ended on: {{ createDateFormat(loan.loanEndDate.$date) }}
+                <div *ngIf="!activeLoans.length">
+                    No active loans
                 </div>
             </div>
-            <div *ngIf="!earlierLoans.length">
-                No earlier loans
+            <div *ngIf="loansTab=='past'">
+                <div *ngIf="earlierLoans.length">
+                    <div *ngFor="let loan of earlierLoans">
+                        <div class="flex items-center justify-center">
+                            <figure class="relative max-w-xs cursor-pointer">
+                                <button (click)="redirect(createPath('/show/', loan.showID))">
+                                    <img class="" [src]=loan.showPoster alt="">
+                                    <figcaption class="absolute text-lg -mt-10 text-white px-4">
+                                        {{ loan.showTitle }}
+                                    </figcaption>    
+                                </button>
+                            </figure>
+                        </div>
+                        Loaned on: {{ createDateFormat(loan.loanStartDate.$date) }}
+                        Ended on: {{ createDateFormat(loan.loanEndDate.$date) }}
+                    </div>
+                </div>
+                <div *ngIf="!earlierLoans.length">
+                    No earlier loans
+                </div>
             </div>
-        </div>
-        <div *ngIf="!userData.loans.length">
-            You don't have any loans
         </div>
     </div>
 </div>
