--- a/frontend/src/app/components/single-show-page/single-show-page.component.html
+++ b/frontend/src/app/components/single-show-page/single-show-page.component.html
@@ -101,11 +101,11 @@
                 </span>
                 <div *ngIf="!isShowLoaned" 
                 class="flex justify-evenly">
-                    <button class="bg-green-700"
+                    <button class="show-button"
                     (click)="loan(show.imdbID, 'month')">
                         Loan for a month
                     </button>
-                    <button class="bg-green-700"
+                    <button class="show-button"
                     (click)="loan(show.imdbID, 'week')">
                         Loan for a week
                     </button>
