--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -17,7 +17,7 @@
         @apply bg-black text-white
     }
     .show-button {
-        @apply rounded-full border-black border-4 bg-white text-red-700 font-extrabold ease-in
+        @apply rounded-full border-black border-4 bg-white text-red-700 font-extrabold ease-in-out duration-500
         hover:bg-red-700 hover:text-white 
     }
 }
