--- a/frontend/src/app/components/friend-page/friend-page.component.html
+++ b/frontend/src/app/components/friend-page/friend-page.component.html
@@ -1,4 +1,11 @@
 <div>
+    <div>
+        <span class="text-center font-bold text-lg rounded-sm"
+        [ngClass]="{'bg-white': !friendInfo, 'success-info': friendInfo!=='Database problem!', 'fail-info': friendInfo==='Database problem!', 'border-2': friendInfo!==''}"
+        >
+            {{ friendInfo }}
+        </span>
+    </div>
     <p>
         {{ userData.accountNick }}
     </p>
